# bsu-sem4-mapreduce

./: CMakeLists.txt  key_value.cpp  lint.sh  mapreduce.cpp  process.cpp  process_unix.cpp  thread_pool.cpp  tmpdir.cpp  wiki_reduce.cpp  wiki_url_map.cpp  wordcount_map.cpp  wordcount_reduce.cpp
include/: key_value.h  process.h  thread_pool.h  tmpdir.h
test/: .gitignore  test.sh
test/data/: input1.txt  medium2.txt  output1.txt
wiki_test/: .gitignore  mr.sh  output.txt  test.sh
wordcount_test/: test.sh
wordcount_test/data/: input1.txt  input2.txt  medium1.txt  output2.txt
